[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.0"
humantime = "2.1.0"
fern = "0.6.2"
tmi = "0.4.0"
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
once_cell = "1.19.0"
mongodb = "2.8.1"
dotenv = "0.15.0"
